----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-12-29 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php: Fix typo.
    * server_databases.php: Use same sort order as in left frame (bug
      #1087244), allow sorting even if not showing stats.
    * pdf_schema.php, libraries/fpdf/fpdf.php, libraries/fpdf/ufpdf.php,
      libraries/fpdf/font/FreeSans*: Added support for PDF output in utf-8,
      uses UFPDF class from http://www.acko.net/node/56. NOTE: We now have a
      bit modified FPDF class. (bug #1046051)
    * Documentation.html: Added info about UFPDF library.
    * lang/czech, lang/english: Improved some texts, also bug #1009667.

2004-12-28 Michal Čihař  <michal@cihar.com>
    * libraries/tbl_move_copy.php: Fix constraints copying (bug #1085900).
    * config.inc.php, lang/*, libraries/common.lib.php,
      libraries/config_import.lib.php, libraries/display_export.lib.php,
      libraries/export/sql.php: Support for selecting SQL export compatibility
      (RFE #1060040).
    * libraries/tbl_change.js: Faster navigation in calendar (RFE #1090315).
    * mult_submits.inc.php, tbl_row_delete.php: Fix % escaping (bug #1082954).
    * read_dump.php: Fix database name extraction from use statement (bug
      #1084777).
    * css/phpmyadmin.css.php, libraries/common.lib.php: Disabled theme manager
      still allows to select theme in configuration (bug #1084712).
    * tbl_replace.php: Remove unused code.
    * main.php, lang/*, libraries/string.lib.php: Added warnings about
      mbstring - one to disable function overloading and one for requesting
      mbstring for multibyte charsets (bugs #1063149 and #1063821).
    * tbl_change.php, tbl_replace.php, lang/*, libraries/common.lib.php:
      Support for editing next entry (when numeric primary key) (RFE
      #1074906).

2004-12-26 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php: bug #1085647, wrong parameters